cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-db"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait.workspace = true
eyre.workspace = true
futures-util.workspace = true
paste.workspace = true
rocksdb.workspace = true
tempfile = { workspace = true, optional = true }
tracing.workspace = true

hyperlane-core = { path = "../hyperlane-core", features = ["agent", "float"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tempfile.workspace = true
