[package]
name = "hyperlane-rust-challenge"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["derive"] }
ethers = { features = ["rustls"] }
anyhow.workspace = true
tokio = { features = ["rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true
dotenv = "0.15.0"
hex.workspace = true
