[package]
name = "hyperlane-test"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
ethers.workspace = true
eyre.workspace = true
futures-util.workspace = true
mockall = "0.11"
rand = "0.8"
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.3"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true

hyperlane-core = { path = "../hyperlane-core" }
