cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-test"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
mockall.workspace = true

hyperlane-core = { path = "../hyperlane-core" }
