[package]
name = "optics-core"
version = "0.1.0"
authors = ["James Prestwich <prestwich@clabs.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
sha3 = "0.9.1"
lazy_static = "*"
thiserror = "*"
async-trait = { version = "0.1.42", default-features = false }
tracing = "0.1.22"
tracing-futures = "0.2.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

[dev-dependencies]
tokio = {version = "1.0.1", features = ["rt", "time"]}

[[example]]
name = "toy"
path = "./bin/toy.rs"