[package]
name = "optics-test"
version = "0.1.0"
authors = ["Luke Tchang <ltchang@stanford.edu>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0.1", features = ["rt", "macros"] }
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
thiserror = { version = "1.0.22", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
futures-util = "0.3.12"
color-eyre = "0.5.0"
mockall = "0.9.1"
rand = "0.8.3"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }

optics-core = { path = "../optics-core" }
optics-ethereum = { path = "../chains/optics-ethereum"}