[workspace]
members = [
    "hyperlane-core",
    "client",
    "programs/mailbox",
    "programs/mailbox-test",
    "programs/recipient/echo",
    "programs/ism/rubber-stamp",
    "programs/ism/multisig-ism-message-id",
    "programs/ism/test-ism",
    "programs/hyperlane-sealevel-token",
    "programs/hyperlane-sealevel-token-collateral",
    "programs/hyperlane-sealevel-token-native",
    "programs/test-send-receiver",
    "programs/validator-announce",
    "libraries/access-control",
    "libraries/account-utils",
    "libraries/ecdsa-signature",
    "libraries/interchain-security-module-interface",
    "libraries/message-recipient-interface",
    "libraries/multisig-ism",
    "libraries/serializable-account-meta",
    "libraries/hyperlane-sealevel-token",
    "libraries/hyperlane-sealevel-connection-client",
    "libraries/test-utils",
]
