[workspace]
members = [
    "client",
    "libraries/access-control",
    "libraries/account-utils",
    "libraries/ecdsa-signature",
    "libraries/hyperlane-sealevel-connection-client",
    "libraries/hyperlane-sealevel-token",
    "libraries/interchain-security-module-interface",
    "libraries/message-recipient-interface",
    "libraries/multisig-ism",
    "libraries/serializable-account-meta",
    "libraries/test-transaction-utils",
    "libraries/test-utils",
    "programs/hyperlane-sealevel-igp",
    "programs/hyperlane-sealevel-igp-test",
    "programs/hyperlane-sealevel-token",
    "programs/hyperlane-sealevel-token-collateral",
    "programs/hyperlane-sealevel-token-native",
    "programs/ism/multisig-ism-message-id",
    "programs/ism/test-ism",
    "programs/mailbox",
    "programs/mailbox-test",
    "programs/test-send-receiver",
    "programs/validator-announce",
]

[workspace.package]
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../../LICENSE.md"
publish = false
version = "0.1.0"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0"
async-trait = "0.1"
async-rwlock = "1.3"
auto_impl = "1.0"
axum = "0.6.1"
backtrace = "0.3"
base64 = "0.21.2"
bigdecimal = "0.4.2"
bincode = "1.3"
borsh = "0.9"
bs58 = "0.5.0"
bytes = "1"
clap = "4"
config = "0.13.3"
console-subscriber = "0.2.0"
convert_case = "0.6"
crunchy = "0.2"
ctrlc = "3.2"
curve25519-dalek = { version = "~3.2", features = ["serde"] }
derive-new = "0.5"
eyre = "=0.6.8"
fixed-hash = "0.8.0"
futures = "0.3"
futures-util = "0.3"
generic-array = { version = "0.14", features = ["serde", "more_lengths"] }
# Required for WASM support https://docs.rs/getrandom/latest/getrandom/#webassembly-support
bech32 = "0.9.1"
elliptic-curve = "0.12.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
injective-protobuf = "0.2.2"
injective-std = "0.1.5"
itertools = "*"
jobserver = "=0.1.26"
jsonrpc-core = "18.0"
k256 = { version = "0.13.1", features = ["std", "ecdsa"] }
log = "0.4"
macro_rules_attribute = "0.2"
maplit = "1.0"
mockall = "0.11"
nix = { version = "0.26", default-features = false }
num = "0.4"
num-bigint = "0.4"
num-derive = "0.4.0"
num-traits = "0.2"
once_cell = "1.18.0"
parking_lot = "0.12"
paste = "1.0"
pretty_env_logger = "0.5.0"
primitive-types = "=0.12.1"
prometheus = "0.13"
protobuf = "*"
rand = "0.8.5"
regex = "1.5"
reqwest = "0.11"
ripemd = "0.1.3"
rlp = "=0.5.2"
rocksdb = "0.21.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10.6", default-features = false }
sha256 = "1.1.4"
sha3 = "0.10"
solana-account-decoder = "=1.14.13"
solana-banks-client = "=1.14.13"
solana-banks-interface = "=1.14.13"
solana-banks-server = "=1.14.13"
solana-clap-utils = "=1.14.13"
solana-cli-config = "=1.14.13"
solana-client = "=1.14.13"
solana-program = "=1.14.13"
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"
solana-transaction-status = "=1.14.13"
solana-zk-token-sdk = "=1.14.13"
spl-associated-token-account = { version = "=1.1.2", features = [
    "no-entrypoint",
] }
spl-noop = { version = "=0.1.3", features = ["no-entrypoint"] }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.5.0", features = ["no-entrypoint"] }
spl-type-length-value = "=0.1.0"
static_assertions = "1.1"
strum = "0.26.2"
strum_macros = "0.26.2"
tempfile = "3.3"
thiserror = "1.0"
time = "0.3"
tiny-keccak = "2.0.2"
tokio = { version = "1.37", features = ["parking_lot", "tracing"] }
tokio-metrics = { version = "0.3.1", default-features = false }
tokio-test = "0.4"
toml_edit = "0.19.14"
tonic = "0.9.2"
tracing = { version = "0.1" }
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-test = "0.2.2"
typetag = "0.2"
uint = "0.9.5"
ureq = { version = "2.4", default-features = false }
url = "2.3"
uuid = "=1.11.0"
walkdir = "2"
warp = "0.3"
which = "4.3"
ya-gcp = { version = "0.11.1", features = ["storage"] }


[profile.release.package.access-control]
overflow-checks = true

[profile.release.package.account-utils]
overflow-checks = true

[profile.release.package.ecdsa-signature]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-connection-client]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-token-lib]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-interchain-security-module-interface]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-message-recipient-interface]
overflow-checks = true

[profile.release.package.multisig-ism]
overflow-checks = true

[profile.release.package.serializable-account-meta]
overflow-checks = true

[profile.release.package.hyperlane-test-transaction-utils]
overflow-checks = true

[profile.release.package.hyperlane-test-utils]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-mailbox]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-igp]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-igp-test]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-token]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-token-collateral]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-token-native]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-multisig-ism-message-id]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-test-ism]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-mailbox-test]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-test-send-receiver]
overflow-checks = true

[profile.release.package.hyperlane-sealevel-validator-announce]
overflow-checks = true


[workspace.dependencies.ethers]
features = []
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2024-04-25"

[workspace.dependencies.ethers-contract]
features = ["legacy"]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2024-04-25"

[workspace.dependencies.ethers-providers]
features = []
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2024-04-25"

[workspace.dependencies.ethers-signers]
features = ["aws"]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2024-04-25"

[patch.crates-io.bumpalo]
git = "https://github.com/fitzgen/bumpalo"
tag = "3.14.0"
version = "=3.14.0"

[patch.crates-io.curve25519-dalek]
branch = "v3.2.2-relax-zeroize"
git = "https://github.com/Eclipse-Laboratories-Inc/curve25519-dalek"
version = "3.2.2"

[patch.crates-io.primitive-types]
branch = "hyperlane"
git = "https://github.com/hyperlane-xyz/parity-common.git"
version = "=0.12.1"

[patch.crates-io.rlp]
branch = "hyperlane"
git = "https://github.com/hyperlane-xyz/parity-common.git"
version = "=0.5.2"

[patch.crates-io.solana-account-decoder]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-banks-client]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-clap-utils]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-cli-config]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-client]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-program]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-program-test]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-sdk]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-transaction-status]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.solana-zk-token-sdk]
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2025-05-21"
version = "=1.14.13"

[patch.crates-io.spl-associated-token-account]
branch = "hyperlane"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
version = "=1.1.2"

[patch.crates-io.spl-noop]
branch = "hyperlane"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
version = "=0.1.3"

[patch.crates-io.spl-token]
branch = "hyperlane"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
version = "=3.5.0"

[patch.crates-io.spl-token-2022]
branch = "hyperlane"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
version = "=0.5.0"

[patch.crates-io.spl-type-length-value]
version = "=0.1.0"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
branch = "hyperlane"
