[workspace]
resolver = "2" # Enables new feature resolver, good practice for new workspaces
version = "0.1.0"
publish = false
# TODO: docs, edition, homepage, license

members = [
    "lib/core",
    "lib/relayer",
    "lib/validator",
    "demo/multisig",
    "demo/relayer",
    "demo/validator",
]

[workspace.dependencies]
# eb71df4 is v1.0.0 commit
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
serde_json = "1.0.107"
tokio = { version = "1.36", features = ["full"] }
clap = "4.5.39"
log = "0.4.20"
faster-hex = "0.9.0"
bip39 = "2.1.0"
workflow-core = { version = "0.18.0" }

# Additional dependencies for Hyperlane bridge integration
anyhow = "1.0"
hex = "0.4.3"
hyperlane-core = { path = "../../../rust/main/hyperlane-core" }