[workspace]
resolver = "2" # Enables new feature resolver, good practice for new workspaces
version = "0.1.0"
publish = false
# TODO: docs, edition, homepage, license

members = [
    "lib/core",
    "lib/relayer",
    "lib/validator",
    "lib/api",
    "demo/multisig",
    "demo/relayer",
    "demo/validator",
]

[workspace.dependencies]

# KASPA ( eb71df4 is v1.0.0 commit)
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }


api-rs = { path = "../api", package = "openapi" }

secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
serde_json = "1.0.107"
tokio = { version = "1.36", features = ["full"] }
clap = "4.5.39"
log = "0.4.20"
faster-hex = "0.9.0"
bip39 = "2.1.0"
workflow-core = { version = "0.18.0" }
tracing = { version = "0.1" }
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-test = "0.2.2"
# reqwest = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] } # had to use 0.12 to be compatible with open ai generation
bytes = "1"
reqwest-middleware = "0.4"

# HYPERLANE
axum = "0.8.4"
url = "2.3"
eyre = "=0.6.8"
hyperlane-cosmos-rs = { package = "hyperlane-cosmos-dymension-rs", git = "https://github.com/srene/hyperlane-cosmos-rs", rev = "0a64221" }
