[workspace]
resolver = "2" # Enables new feature resolver, good practice for new workspaces
# TODO: docs, edition, homepage, license

members = [
    "lib/core",
    "lib/api",
    "lib/hardcode",
    "lib/kms",
]

[workspace.dependencies]
# Fix for cosmwasm-crypto incompatibility with ed25519-zebra v4.1.0
# See: https://github.com/CosmWasm/cosmwasm/issues/2525
ed25519-zebra = "=4.0.3"

# Match the protobuf version used in rust/main workspace to avoid conflicts
# rust/main uses v2.28.0, while cargo would pick v3.x without this constraint
protobuf = "=2.28.0"

kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }
kaspa-consensus-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "9ff5d0f" }

rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }


api-rs = { path = "../api", package = "openapi" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
serde_json = "1.0.107"
tokio = { version = "1.36", features = ["full"] }
clap = "4.5.39"
log = "0.4.20"
workflow-core = { version = "0.18.0" }
tracing = { version = "0.1" }
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] } # had to use 0.12 to be compatible with open ai generation
bytes = "1"
reqwest-middleware = "0.4"
hex = "0.4.3"
axum = "0.8.4"
url = "2.3"
eyre = "=0.6.8"
