[package]
name = "kathy"
version = "0.1.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {version = "0.1.42", default-features = false}
color-eyre = "0.5.0"
config = "0.10"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures-util = "0.3.12"
log = "0.4.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", default-features = false}
thiserror = {version = "1.0.22", default-features = false}
tokio = {version = "1.0.1", features = ["rt", "macros"]}
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
rand = "0.8.3"

optics-base = {path = "../../optics-base"}
optics-core = {path = "../../optics-core"}
paste = "1.0.5"
