[package]
name = "kathy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", default-features = false }
eyre = "0.6"
color-eyre = { version = "0.6", optional = true }
config = "0.13"
ethers = { git = "https://github.com/abacus-network/ethers-rs", tag = "2022-08-19-01" }
futures-util = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", default-features = false}
thiserror = {version = "1.0", default-features = false}
tokio = {version = "1", features = ["rt", "macros"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
rand = "0.8.3"

abacus-base = {path = "../../abacus-base"}
abacus-core = {path = "../../abacus-core"}

[features]
default = ["color-eyre"]
oneline-errors = ["abacus-base/oneline-eyre"]
